# stoic_time_bot

./: README.md  main.py  pyproject.toml
app/database/: db_commands.py
app/handlers/: __init__.py  handl.py
app/keyboards/: __init__.py  buttons_reply.py  kb_reply.py
app/utils/: __init__.py  convert_time.py  create_bot.py  sup_func.py
